# Web-crawler

./: main.cpp
CDP/: CDPScraper.cpp  CDPScraper.h  CMakeLists.txt  cdp_scraper.cpp  main.cpp
CDP/old/: CDPScraper.cpp  CDPScraper.h
Database/: CMakeLists.txt  Database.cpp  main.cpp
Database/include/: Database.h
Database/src/: Database.cpp
Only Html Download/: downloader.cpp  downloader.h  test.cpp
docs/Buildlogs/: 14-july-session-2.md
docs/Daily journal/: 6-july-2026.md  7-july-2026.md
docs/Design Proposal/: web_crawler_design_proposal_v1.md  web_crawler_design_proposal_v2.md  web_crawler_design_proposal_v3.md
include/: Frontier.h  HtmlParser.h  HtmlParserold.h  Queue.h
include/STL/: DynamicArray.h  HashMap.h  LinkedList.h  MyHash.h
src/: Crawler.cpp  HtmlParser.cpp  HtmlParserolder.cpp  HtmlParseroldest.cpp  LinkedList.tpp  Normalizer.cpp  Queue.tpp
src/DynamicArray/: DynamicArray.tpp
src/HashMap/: HashMap.tpp
src/LinkedList/: LinkedList.tpp
src/ignore/: domain.txt
test/: linkedlist_remove_regression.cpp
